# contriever

./: finetuning.py  negatives_miner.py  preprocess_datasets.py  pyproject.toml  train_with_tevatron.py
example_scripts/: finetune_mcontriever.sh
src/: contriever.py  finetuning_data.py  utils.py
